# westream

./: README.md
desktop-shell/: Cargo.toml  README.md
desktop-shell/resources/web/: index.html
desktop-shell/src/: main.rs
desktop-shell/src/config/: defaults.rs  mod.rs  paths.rs
desktop-shell/src/services/: mod.rs
desktop-shell/src/services/addons/: mod.rs
desktop-shell/src/services/metadata/: mod.rs
desktop-shell/src/services/playback/: mod.rs
desktop-shell/src/services/user/: auth.rs  sync.rs
desktop-shell/src/ui/: mod.rs
desktop-shell/src/utils/: error.rs  logging.rs
desktop-shell/src/webview/: bindings.rs  bridge.js  manager.rs  mod.rs  router.rs
desktop-shell/src/window/: messaging.rs  mod.rs  styling.rs
frontend/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: rust.ts
