[package]
name = "desktop-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
webview2 = "0.1.4"
windows = { version = "0.54.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "implement" 
]}
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
log = "0.4.25"
directories = "6.0.0" # For config paths


# winapi = { version = "0.3.9", features = ["winuser"] }