[package]
name = "desktop-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
webview2-com = "0.35.0"
webview2-com-macros = "0.8.0"
webview2-com-sys = "0.35.0"
windows-core = "0.59.0"
windows-targets = "0.53.0" 
windows-interface = "0.59.0"  
windows = { version = "0.59.0", features = [
    # "Win32_Foundation",
    # "Win32_UI_WindowsAndMessaging",
    # "Win32_System_LibraryLoader",
    # "Win32_System_SystemServices",
    # "Win32_UI_Controls",
    # "Win32_Graphics_Gdi",
    # "Win32_System_Com",
    # "Win32_System_WinRT",
    # "Win32_Globalization",
    # "Win32_System_Ole",
    # "Win32_System_Variant",
    # "Win32_UI_HiDpi",
     "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_WinRT",
    "Win32_Globalization",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_HiDpi",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Com_Urlmon",
    "Win32_System_Com_Events"
] }

windows-implement = "0.59.0" 
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
log = "0.4.25"
directories = "6.0.0"
thiserror = "2.0.11"
env_logger = "0.11.6"


[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
panic = "abort"